# repositorybaselayer

./: .gitignore  README.md  pyproject.toml
coolrepo/: __init__.py  execute.py  fetch.py  filters.py  repository.py  types.py
coolrepo/repository/: __init__.py  abc.py  base.py  model.py  proto.py
coolrepo/tools/: __init__.py  func.py  magic.py  misc.py
examples/: client_repository.py  models.py
rbl/: __init__.py  fetch.py  filters.py  join.py  types.py
rbl/repository/: __init__.py  model.py  proto.py
rbl/tools/: __init__.py  functional.py  magic.py
