[tool.poetry]
name = "coolrepo"
version = "0.0.1"
description = "Cool repo utility for sqlalchemy"
authors = ["timoniq <arseny.kriuchkov@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.40"
fntypes = {git = "https://github.com/timoniq/fntypes.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
